# kobo-highlights-extractor

./: .gitignore  Makefile  README.md  main.spec  pyproject.toml
.github/workflows/: release.yml
scripts/: pyi_entry.py
src/kobo_highlights_extractor/: __init__.py  chapter_title.py  cli.py  detect.py  exporter.py  md_exporter.py
