[project]
name = "kobo-highlights-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kobo-highlights-extractor = "kobo_highlights_extractor.cli:main"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kobo_highlights_extractor"]

[tool.basedpyright]
# Python and environment
pythonVersion = "3.12"
pythonPlatform = "Linux"
venvPath = "."
venv = ".venv"

# What to analyze
include = ["src"]

# Type checking strictness
typeCheckingMode = "standard"

# Common diagnostics (tweak as you like)
reportMissingImports = "warning"
reportMissingTypeStubs = "warning"
